Add Helm chart, monitoring, and deployment automation
Introduced a production-ready Helm chart for the MLOps sentiment analysis service, including templates for deployment, service, ingress, monitoring, and security. Added GitHub Actions workflows for Helm-based multi-environment deployment and validation. Provided comprehensive documentation for monitoring (MONITORING.md) and quickstart setup (QUICKSTART.md). Included scripts for Helm deployment and monitoring stack setup, as well as Kubernetes manifests for monitoring components.

--- a/.github/workflows/deploy-environments.yml
+++ b/.github/workflows/deploy-environments.yml
@@ -57,18 +57,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
     - name: Setup kubectl
       uses: azure/setup-kubectl@v3
       with:
         version: 'v1.28.0'
 
-    - name: Configure kubectl
-      run: |
-        echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > kubeconfig
-        export KUBECONFIG=kubeconfig
-        kubectl cluster-info
-
+    - name: Setup Helm
+      uses: azure/setup-helm@v3
     - name: Prepare environment-specific configurations
       run: |
         ENV="${{ inputs.environment }}"
