Add benchmarking framework and documentation
Introduced a comprehensive benchmarking system for sentiment analysis, including scripts, configuration files, Kubernetes manifests for CPU/GPU deployments, and example usage. Updated README and QUICKSTART guides to reference benchmarking, and added detailed documentation (BENCHMARKING.md, benchmarking/README.md) covering performance testing, cost analysis, and resource monitoring.

--- a/monitoring/prometheus-rules.yaml
+++ b/monitoring/prometheus-rules.yaml
@@ -1,7 +1,10 @@
 # Extended Prometheus Rules for MLOps
 # Расширенные правила Prometheus для MLOps системы
 
+# For kube-prometheus-stack (common in newer installations):
 apiVersion: monitoring.coreos.com/v1
+# For older versions, you might need:
+# apiVersion: monitoring.coreos.com/v1alpha1
 kind: PrometheusRule
 metadata:
   name: mlops-extended-rules
