--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,18 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+addopts = 
+    -v
+    --cov=app
+    --cov-report=term-missing
+    --cov-report=html
+    --cov-report=xml
+    --cov-fail-under=85
+    --strict-markers
+    --tb=short
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
+    cache: marks tests for cache functionality
+    strategy: marks tests for strategy pattern
