--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ requests==2.31.0
 prometheus-client==0.19.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-cov==4.1.0
 structlog==23.2.0
+httpx==0.25.1
