Update Dockerfile and CI workflows to use Python 3.11 and enhance deployment processes
This commit updates the base image in the Dockerfile to Python 3.11 for improved performance and compatibility. Additionally, the CI workflow is modified to reflect the new Python version, streamline dependency installation, and enhance the deployment process with clearer tagging and health check mechanisms. The Terraform workflow is also updated to allow for environment-specific deployments and improved error handling during Terraform operations.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  PYTHON_VERSION: "3.9"
+  PYTHON_VERSION: "3.11"
 
 jobs:
   # Test and lint code
@@ -25,15 +25,16 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
-          pip install pytest pytest-cov pytest-asyncio black isort flake8 mypy ruff
+          pip install -r requirements-dev.txt
 
       - name: Code quality checks
         run: |
           black --check app/ tests/
           isort --check-only app/ tests/
           ruff check app/ tests/
-          flake8 app/ tests/ --max-line-length=88 --extend-ignore=E203,W503
+          flake8 app/ tests/
           mypy app/ --ignore-missing-imports --allow-untyped-decorators
 
       - name: Run unit tests
@@ -48,15 +49,13 @@ jobs:
           MLOPS_DEBUG: true
           MLOPS_LOG_LEVEL: DEBUG
 
-      - name: Test coverage report
-        run: |
-          echo "## Test Coverage Report" >> $GITHUB_STEP_SUMMARY
-          pytest --cov=app --cov-report=term >> $GITHUB_STEP_SUMMARY || true
-
-      - name: Upload coverage
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
 
   # Build and push Docker image
   build:
@@ -64,7 +63,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     outputs:
-      image: ${{ steps.meta.outputs.tags }}
+      image_tag: ${{ steps.extract_tag.outputs.tag }}
+      image_full: ${{ steps.extract_tag.outputs.full }}
 
     steps:
       - uses: actions/checkout@v4
@@ -85,16 +85,35 @@ jobs:
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
-            type=sha,prefix={{branch}}-
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha,prefix={{branch}}-,format=short
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push
+        id: build
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            BUILDTIME=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
+            VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+            REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
+
+      - name: Extract image tag for deployment
+        id: extract_tag
+        run: |
+          # Extract the first tag (branch name or semver)
+          FULL_TAG=$(echo "${{ steps.meta.outputs.tags }}" | head -n1)
+          SHORT_TAG=$(echo "$FULL_TAG" | cut -d':' -f2)
+          echo "tag=$SHORT_TAG" >> $GITHUB_OUTPUT
+          echo "full=$FULL_TAG" >> $GITHUB_OUTPUT
+          echo "Extracted tag: $SHORT_TAG"
+          echo "Full image: $FULL_TAG"
 
   # Security scan
   security:
@@ -103,24 +122,34 @@ jobs:
     if: github.event_name != 'pull_request'
 
     steps:
-      - name: Run Trivy scan
+      - uses: actions/checkout@v4
+
+      - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ needs.build.outputs.image }}
+          image-ref: ${{ needs.build.outputs.image_full }}
           format: "sarif"
           output: "trivy-results.sarif"
+          severity: "CRITICAL,HIGH"
 
-      - name: Upload results
+      - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v2
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
 
+      - name: Run Trivy in table mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ needs.build.outputs.image_full }}
+          format: "table"
+          severity: "CRITICAL,HIGH"
+
   # Deploy to environments
   deploy:
     needs: [build, security]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.event_name != 'pull_request'
+    if: github.event_name == 'push'
     strategy:
       matrix:
         environment: [development, staging, production]
@@ -142,46 +171,128 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: azure/setup-kubectl@v3
+
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v3
         with:
           version: "v1.28.0"
 
-      - name: Setup kubectl
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: "v3.13.0"
+
+      - name: Setup kubectl config
         run: |
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > kubeconfig
-          export KUBECONFIG=kubeconfig
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $HOME/.kube/config
+          chmod 600 $HOME/.kube/config
+          export KUBECONFIG=$HOME/.kube/config
+          kubectl cluster-info
+
+      - name: Check deployment conditions
+        id: should_deploy
+        run: |
+          SHOULD_DEPLOY=false
+
+          # Production requires tag
+          if [[ "${{ matrix.environment }}" == "production" ]]; then
+            if [[ "${{ github.ref }}" =~ ^refs/tags/v ]]; then
+              SHOULD_DEPLOY=true
+              echo "Production deployment: tag detected"
+            else
+              echo "Skipping production: requires version tag (v*)"
+            fi
+          # Development requires develop branch
+          elif [[ "${{ matrix.environment }}" == "development" ]]; then
+            if [[ "${{ github.ref }}" == "refs/heads/develop" ]]; then
+              SHOULD_DEPLOY=true
+              echo "Development deployment: develop branch"
+            else
+              echo "Skipping development: requires develop branch"
+            fi
+          # Staging requires main branch
+          elif [[ "${{ matrix.environment }}" == "staging" ]]; then
+            if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+              SHOULD_DEPLOY=true
+              echo "Staging deployment: main branch"
+            else
+              echo "Skipping staging: requires main branch"
+            fi
+          fi
+
+          echo "deploy=$SHOULD_DEPLOY" >> $GITHUB_OUTPUT
 
       - name: Deploy with Helm
+        if: steps.should_deploy.outputs.deploy == 'true'
         run: |
-          export KUBECONFIG=kubeconfig
-
-          # Determine if we should deploy based on branch/tag
-          if [[ "${{ matrix.environment }}" == "production" && ! "${{ github.ref }}" =~ ^refs/tags/v ]]; then
-            echo "Skipping production deployment - requires tag"
-            exit 0
-          fi
-
-          if [[ "${{ matrix.environment }}" != "production" && "${{ github.ref }}" != "refs/heads/${{ matrix.branch }}" ]]; then
-            echo "Skipping ${{ matrix.environment }} deployment - wrong branch"
-            exit 0
-          fi
+          export KUBECONFIG=$HOME/.kube/config
 
           # Deploy using Helm
           helm upgrade --install mlops-sentiment ./helm/mlops-sentiment \
             --namespace ${{ matrix.namespace }} \
             --create-namespace \
-            --set image.tag=${{ needs.build.outputs.image }} \
+            --set image.repository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} \
+            --set image.tag=${{ needs.build.outputs.image_tag }} \
             --set replicaCount=${{ matrix.replicas }} \
+            --values ./helm/mlops-sentiment/values.yaml \
             --values ./helm/mlops-sentiment/values-${{ matrix.environment }}.yaml \
             --wait --timeout=10m
 
-      - name: Run health checks
-        run: |
-          export KUBECONFIG=kubeconfig
-          sleep 10
+          echo "✅ Deployment to ${{ matrix.environment }} completed successfully"
 
-          # Get service URL
+      - name: Run health checks
+        if: steps.should_deploy.outputs.deploy == 'true'
+        run: |
+          export KUBECONFIG=$HOME/.kube/config
+
+          echo "Waiting for pods to be ready..."
+          kubectl wait --for=condition=ready pod \
+            -l app.kubernetes.io/name=mlops-sentiment \
+            -n ${{ matrix.namespace }} \
+            --timeout=300s
+
+          # Check pod status
+          echo "Pod status:"
+          kubectl get pods -n ${{ matrix.namespace }} -l app.kubernetes.io/name=mlops-sentiment
+
+          # Get service URL and test health endpoint
           if kubectl get ingress -n ${{ matrix.namespace }} mlops-sentiment &>/dev/null; then
             SERVICE_URL=$(kubectl get ingress mlops-sentiment -n ${{ matrix.namespace }} -o jsonpath='{.spec.rules[0].host}')
-            curl -f http://$SERVICE_URL/health || exit 1
+            echo "Testing health endpoint: http://$SERVICE_URL/health"
+
+            # Retry health check up to 5 times
+            for i in {1..5}; do
+              if curl -f -s -o /dev/null -w "%{http_code}" http://$SERVICE_URL/health | grep -q "200"; then
+                echo "✅ Health check passed"
+                exit 0
+              fi
+              echo "Attempt $i/5 failed, waiting 10 seconds..."
+              sleep 10
+            done
+
+            echo "⚠️ Health check failed after 5 attempts"
+            exit 1
+          else
+            echo "⚠️ No ingress found, skipping external health check"
+
+            # Internal health check via port-forward
+            echo "Testing internal health check..."
+            POD_NAME=$(kubectl get pod -n ${{ matrix.namespace }} -l app.kubernetes.io/name=mlops-sentiment -o jsonpath='{.items[0].metadata.name}')
+            kubectl exec -n ${{ matrix.namespace }} $POD_NAME -- curl -f http://localhost:8000/health
           fi
+
+      - name: Deployment summary
+        if: steps.should_deploy.outputs.deploy == 'true'
+        run: |
+          echo "## Deployment Summary - ${{ matrix.environment }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Environment**: ${{ matrix.environment }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Namespace**: ${{ matrix.namespace }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Image**: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build.outputs.image_tag }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Replicas**: ${{ matrix.replicas }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Deployed Resources" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          kubectl get all -n ${{ matrix.namespace }} -l app.kubernetes.io/name=mlops-sentiment >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
