--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-transformers==4.35.2
-torch==2.1.1 --index-url https://download.pytorch.org/whl/cpu
-pydantic==2.5.0
-pydantic-settings==2.1.0
+transformers==4.33.0
+torch==2.6.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
 python-dotenv==1.0.0
 requests==2.31.0
 prometheus-client==0.19.0
